--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,5 +12,112 @@
         android:layout_height="match_parent"
         tools:ignore="MissingClass" />
 
+    <HorizontalScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10sp"
+            android:orientation="horizontal"
+            android:layout_marginBottom="20sp"
+            android:gravity="center">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:id="@+id/gun"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Gun"
+                android:fontFamily="@font/poppins"
+                android:textSize="16sp"
+                android:backgroundTint="@color/white"
+                android:textColor="@color/black"
+                android:paddingTop="8sp"
+                android:background="@color/white"
+                android:layout_marginLeft="30sp"
+                android:layout_marginRight="5sp"
+                android:paddingBottom="8sp"
+                android:paddingLeft="10sp"
+                android:paddingRight="10sp"/>
+            <TextView
+                android:id="@+id/minion"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Minion"
+                android:fontFamily="@font/poppins"
+                android:textSize="16sp"
+                android:backgroundTint="@color/white"
+                android:textColor="@color/black"
+                android:paddingTop="8sp"
+                android:background="@color/white"
+                android:layout_marginRight="5sp"
+                android:paddingBottom="8sp"
+                android:paddingLeft="10sp"
+                android:paddingRight="10sp"/>
+            <TextView
+                android:id="@+id/invento"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Invento"
+                android:layout_marginRight="5sp"
+                android:fontFamily="@font/poppins"
+                android:textSize="16sp"
+                android:background="@color/white"
+                android:backgroundTint="@color/white"
+                android:textColor="@color/black"
+                android:paddingTop="8sp"
+                android:paddingBottom="8sp"
+                android:paddingLeft="10sp"
+                android:paddingRight="10sp"/>
+            <TextView
+                android:id="@+id/m4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="M4"
+                android:fontFamily="@font/poppins"
+                android:textSize="16sp"
+                android:layout_marginRight="5sp"
+                android:background="@color/white"
+                android:backgroundTint="@color/white"
+                android:textColor="@color/black"
+                android:paddingTop="8sp"
+                android:paddingBottom="8sp"
+                android:paddingLeft="10sp"
+                android:paddingRight="10sp"/>
+            <TextView
+                android:id="@+id/mustang"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Mustang"
+                android:fontFamily="@font/poppins"
+                android:textSize="16sp"
+                android:layout_marginRight="5sp"
+                android:background="@color/white"
+                android:backgroundTint="@color/white"
+                android:textColor="@color/black"
+                android:paddingTop="8sp"
+                android:paddingBottom="8sp"
+                android:paddingLeft="10sp"
+                android:paddingRight="10sp"/>
+            <TextView
+                android:id="@+id/shelby"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="M Shelby"
+                android:fontFamily="@font/poppins"
+                android:textSize="16sp"
+                android:background="@color/white"
+                android:backgroundTint="@color/white"
+                android:textColor="@color/black"
+                android:layout_marginRight="30sp"
+                android:paddingTop="8sp"
+                android:paddingBottom="8sp"
+                android:paddingLeft="10sp"
+                android:paddingRight="10sp"/>
+
+        </LinearLayout>
+    </HorizontalScrollView>
+
+
+</RelativeLayout>
